--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ClimaTrack - Plan with Probabilities, Not Forecasts</title>
-    <meta name="description" content="Plan outdoor activities months ahead using NASA-based historical weather probabilities. ClimaTrack reveals likelihood of extreme conditions for any place and day of year." />
+    <meta
+      name="description"
+      content="Plan outdoor activities months ahead using NASA-based historical weather probabilities. ClimaTrack reveals likelihood of extreme conditions for any place and day of year."
+    />
     <meta name="author" content="OrbitCode" />
 
-    <meta property="og:title" content="ClimaTrack - Historical Weather Probabilities" />
-    <meta property="og:description" content="Plan outdoor activities using decades of NASA Earth observations to understand weather probabilities." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./public/logo.jpg" />
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="ClimaTrack - Historical Weather Probabilities" />
+    <meta
+      property="og:description"
+      content="Plan outdoor activities using decades of NASA Earth observations to understand weather probabilities."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/opengraph-image.png" />
+
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@OrbitCode" />
+    <meta name="twitter:image" content="/opengraph-image.png" />
   </head>
 
   <body>
