fine tune the frontend with actual features description

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       name="description"
       content="Plan outdoor activities months ahead using NASA-based historical weather probabilities. ClimaTrack reveals likelihood of extreme conditions for any place and day of year."
     />
-    <meta name="author" content="OrbitCode" />
+    <meta name="author" content="ClimaTrack Team" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./public/logo.jpg" />
+    <link rel="icon" type="image/png" href="./public/app_logo.jpeg" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="ClimaTrack - Historical Weather Probabilities" />
@@ -24,7 +24,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@OrbitCode" />
+    <meta name="twitter:site" content="@ClimaTrack" />
     <meta name="twitter:image" content="/opengraph-image.png" />
   </head>
 
