fix public folder path

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="ClimaTrack Team" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./public/app_logo.jpeg" />
+    <link rel="icon" type="image/png" href="/app_logo.jpeg" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="ClimaTrack - Historical Weather Probabilities" />
